k8s/frontend-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: shopcart
spec:
  selector:
    app: frontend-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer       # Exposes to internet with a public IP
